--- a/app/pages/index/index.pug
+++ b/app/pages/index/index.pug
@@ -168,7 +168,7 @@ block layout-right
               +table-text._size_small 10:44:00
           +table-col._width_260
             +table-text
-      +table-row
+      +table-row._parent
         +table-row._main
           +table-col._flexible
             +checkbox('row', 'value').__checkbox
@@ -187,6 +187,77 @@ block layout-right
           +table-col._width_100._align_center
             +table-text
               a(href="#") 35
+          +table-col._width_200
+            +table-text-block
+              +table-text 28.04.2017
+              +table-text._size_small 12:14:32
+          +table-col._width_260
+        +table-row._main
+          +table-col._flexible
+            +icon('icon-person').icon._person
+            +checkbox('row', 'value').__checkbox
+            +table-text
+              a(href="#")
+                b Васильев Генадий Николаевич
+            +icon-button('icon-caret')(href='#')._shadow.__toggle
+          +table-col._width_120
+            +table-text Физ. лицо
+          +table-col._width_100._align_center
+            +table-text
+              a(href="#") —
+          +table-col._width_100._align_center
+            +table-text
+              a(href="#") 2
+          +table-col._width_100._align_center
+            +table-text
+              a(href="#") 1
+          +table-col._width_200
+            +table-text-block
+              +table-text 28.04.2017
+              +table-text._size_small 12:14:32
+          +table-col._width_260
+        +table-row._main
+          +table-col._flexible
+            +icon('icon-person').icon._person
+            +checkbox('row', 'value').__checkbox
+            +table-text
+              a(href="#")
+                b Николаева Надежда Васильевна
+            +icon-button('icon-caret')(href='#')._shadow.__toggle
+          +table-col._width_120
+            +table-text Физ. лицо
+          +table-col._width_100._align_center
+            +table-text
+              a(href="#") —
+          +table-col._width_100._align_center
+            +table-text
+              a(href="#") 1
+          +table-col._width_100._align_center
+            +table-text
+              a(href="#") 1
+          +table-col._width_200
+            +table-text-block
+              +table-text 28.04.2017
+              +table-text._size_small 12:14:32
+          +table-col._width_260
+        +table-row._main
+          +table-col._flexible
+            +checkbox('row', 'value').__checkbox
+            +table-text
+              a(href="#")
+                b Александрова Александра  Александровна
+            +icon-button('icon-caret')(href='#')._shadow.__toggle
+          +table-col._width_120
+            +table-text Физ. лицо
+          +table-col._width_100._align_center
+            +table-text
+              a(href="#") —
+          +table-col._width_100._align_center
+            +table-text
+              a(href="#") 2
+          +table-col._width_100._align_center
+            +table-text
+              a(href="#") 1
           +table-col._width_200
             +table-text-block
               +table-text 28.04.2017
