--- a/app/blocks/table/table.scss
+++ b/app/blocks/table/table.scss
@@ -47,17 +47,18 @@
   }
 
   &__icon {
-    margin-right: 16px;
     fill: #797b7c;
 
     &_person {
-      width: 16px;
+      width: 12px;
       height: 12px;
+      margin-right: 18px;
     }
 
     &_card {
-      width: 15px;
+      width: 16px;
       height: 12px;
+      margin-right: 16px;
     }
   }
 
@@ -71,8 +72,12 @@
     display: flex;
     width: 100%;
 
-    &_parent {
+    &_parent, &_children {
       flex-direction: column;
+    }
+
+    &_children {
+      display: none;
     }
 
     &:nth-of-type(odd) {
