--- a/app/pages/index/index.pug
+++ b/app/pages/index/index.pug
@@ -162,8 +162,8 @@ block layout-right
               +table-text 28.04.2017
               +table-text._size_small 10:44:00
           +table-col._width_260
-            +table-text
-      +table-row._parent
+      //- TODO ВТФ???
+      //-+table-row._parent
         +table-row._main
           +table-col._flexible
             +checkbox('row', 'value').__checkbox
