--- a/app/components/search-filter/search-filter.pug
+++ b/app/components/search-filter/search-filter.pug
@@ -8,7 +8,7 @@ include ../../blocks/button/button
 include ../../blocks/dropdown/dropdown
 
 mixin search-filter()
-  +dropdown#search-filter-dropdown
+  +dropdown#search-filter-dropdown._right
     +b.search-filter&attributes(attributes)
       +inner-sidebar
         +inner-sidebar-item._menu
