--- a/app/blocks/accordion/accordion.pug
+++ b/app/blocks/accordion/accordion.pug
@@ -1,13 +1,13 @@
 include ../icon/icons
 
 mixin accordion()
-  +b.accordion&attributes(attributes)
+  .accordion&attributes(attributes)
     block
 
 mixin accordion-item(heading)
-  +e.item&attributes(attributes)
-    +e.button
-      +icon('icon-caret').icon
-      +e.SPAN.heading= heading
-    +e.content
+  .accordion__item&attributes(attributes)
+    .accordion__button
+      +icon('icon-caret', true).accordion__icon
+      .accordion__heading= heading
+    .accordion__content
       block
