split clients-common-info and clients-popup

--- a/app/components/add-tags/add-tags.pug
+++ b/app/components/add-tags/add-tags.pug
@@ -4,7 +4,7 @@ mixin add-tags(tags)
   +b.add-tags&attributes(attributes)
     +e.header
       +e.SPAN.heading Тэги
-      +icon-button('icon-close')._size_small.__button
+      +icon-button('icon-close')(href='#')._size_small.__button
 
     +tags.__tags
       each tag in tags
