--- a/app/pages/test/test.pug
+++ b/app/pages/test/test.pug
@@ -8,7 +8,7 @@ include ../../blocks/partial-button/partial-button
 include ../../components/header/header
 include ../../components/actions-header/actions-header
 include ../../components/add-to-blacklist/add-to-blacklist
-include ../../components/clients-common-info/clients-common-info
+include ../../components/clients-popup/clients-popup
 include ../../components/search-filter/search-filter
 include ../../blocks/icon-menu/icon-menu
 include ../../blocks/accordion/accordion
@@ -38,7 +38,7 @@ block layout-right
         +button(href='#' data-target-popup='#add-to-blacklist')._uppercase._grey.js-show-popup Добавить в черный список (попап)
 
       div(style="display: inline-block; margin: 15px")
-        +button(href='#' data-target-popup='#clients-common-info')._uppercase._grey.js-show-popup Общая информаци о клиентах (попап)
+        +button(href='#' data-target-popup='#clients-popup')._uppercase._grey.js-show-popup Общая информаци о клиентах (попап)
 
     div(style="display: block; margin: 15px; width: 300px;")
       +accordion
@@ -54,4 +54,4 @@ block layout-right
         +search-filter
 
       +add-to-blacklist
-      +clients-common-info
+      +clients-popup
