--- a/app/blocks/icon-button/icon-button.scss
+++ b/app/blocks/icon-button/icon-button.scss
@@ -42,6 +42,28 @@
     }
   }
 
+  &_red {
+    background-color: #ed1c24;
+    border-color: #ca181e;
+    width: 190px;
+    height: 40px;
+    color: #fff;
+
+    &.icon-button_shadow {
+      box-shadow: 0 1px 2px rgba(176, 176, 176, .5), inset 0 2px 0 rgba(255, 255, 255, .3);
+    }
+
+    .icon-button__icon { fill: #fff; }
+
+    &:hover {
+      background-color: #ff333a;
+      border-color: #ca181e;
+      color: #fff;
+
+      .icon-button__icon { fill: #fff; }
+    }
+  }
+
   &_size_small {
     padding: 0;
     width: 32px;
