--- a/app/blocks/input/input.scss
+++ b/app/blocks/input/input.scss
@@ -12,6 +12,14 @@
   will-change: border-color, box-shadow;
   transition: box-shadow .25s ease-in-out, border-color .25s ease-in-out;
 
+  &_text-like {
+    background-color: transparent;
+    border-color: transparent;
+    padding: 0;
+    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+    pointer-events: none;
+  }
+
   &_size_small {
     height: 32px;
   }
