--- a/app/components/individual-info/individual-info.scss
+++ b/app/components/individual-info/individual-info.scss
@@ -7,6 +7,26 @@
     display: flex;
     padding: 8px;
     box-shadow: 0 1px 2px rgba(0, 0, 0, .2);
+
+    .button {
+      justify-content: center;
+      padding: 0;
+      min-width: 142px;
+    }
+
+    &_add-ts {
+      padding-top: 0;
+      margin-top: -8px;
+
+      .button {
+        min-height: initial;
+        height: 32px;
+      }
+
+      .search-bar {
+        height: 32px;
+      }
+    }
   }
 
   &__search-bar {
