--- a/app/blocks/checkbox/checkbox.scss
+++ b/app/blocks/checkbox/checkbox.scss
@@ -2,6 +2,15 @@
   display: inline-block;
   cursor: pointer;
 
+  &_with_label {
+    display: flex;
+    align-items: center;
+    height: 40px;
+    border-radius: 3px;
+    border: 1px solid #d2d3d3;
+    padding: 0 12px;
+  }
+
   &:hover .checkbox__box { border-color: #fb3; }
 
   &__box {
@@ -56,5 +65,12 @@
         opacity: 1;
       }
     }
+  }
+
+  &__text {
+    color: #797b7c;
+    font-size: 14px;
+    font-weight: 400;
+    margin-left: 8px;
   }
 }
