--- a/app/components/clients-popup/clients-popup.scss
+++ b/app/components/clients-popup/clients-popup.scss
@@ -1,7 +1,7 @@
 .clients-popup {
   display: flex;
   min-width: 908px;
-  height: 100%;
+  min-height: 100%;
 
   &__sidebar {
     min-width: 239px;
