--- a/app/components/qr-codes/qr-codes.pug
+++ b/app/components/qr-codes/qr-codes.pug
@@ -19,4 +19,4 @@ mixin qr-codes()
           +button()(href='#')._text_grey._uppercase Сохранить
           +button()(href='#')._text_green._uppercase Сохранить как шаблон
           +button()(href='#')._text_red._uppercase Удалить
-        +qr-form.__form
+        +qr-form
